# kadu-import_history

./: CMakeLists.txt  import_history.cpp  import_history.desc  modver.h
gui/: gui.cpp  gui.h  import.cpp  import.h  import_history.ui
importers/: ggimporter.cpp  ggimporter.h  importer.cpp  importer.h
importers/gg6/: ggimporter.cpp  ggimporter.h
importers/gg7/: ggimporter.cpp
importers/gg8/: gg8importer.cpp  gg8importer.h
translations/: import_history_de.ts  import_history_fr.ts  import_history_pl.ts  update_ts_file
translations/.svn/: all-wcprops  entries
